build(spotless): add code formatting